# IdealisedGeometry

./: .gitignore  CMakeLists.txt  README.md  base_code1.cpp  build.sh  functionality.h  functions.cpp
src/: functionality.h  functions.cpp
srcLib/blas/: README.md
srcLib/dbihar/: README.md
srcLib/dbihar/src/: dcosqb.f  dcosqf.f  dcosqi.f  dcost.f  dcosti.f  dcsqb1.f  dcsqf1.f  defft1.f  defftb.f  defftf.f  deffti.f  dsinqb.f  dsinqf.f  dsinqi.f  pois.f  scfftb.f  scfftf.f  scffti.f  scftb1.f  scftf1.f  scfti1.f  scosqb.f  scosqf.f  scosqi.f  scost.f  scosti.f  scsqb1.f  scsqf1.f  sefft1.f  sefftb.f  sefftf.f  seffti.f  spssb.f  spssb2.f  spssb3.f  spssb4.f  spssb5.f  spssf.f  spssf2.f  spssf3.f  (+23 more)
srcLib/linpack/: README.md
